[package]
name = "kvs"
version = "0.1.0"
authors = ["lyun <yun803453@gamil.com>"]
definitions = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"


[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
